# PongSDL2

./: .gitignore  CMakeLists.txt  README.md
include/app/: game.h  window.h
include/entity/: entity.h  shape.h
include/gfx/: color.h  renderer.h
include/math/: util.h  vec2.h
src/: main.cpp
src/app/: CMakeLists.txt  game.cpp
src/entity/: CMakeLists.txt  entity.cpp
